--- a/assets/media-gallery.css
+++ b/assets/media-gallery.css
@@ -348,11 +348,10 @@ product-model[loaded] .media-poster {
   }
   .product-media__inner .media-gallery {
     display: flex;
-    flex-direction: row-reverse;
+    gap: 32px;
   }
   .product-media__inner .media-gallery__thumbs {
     width: 80px;
-    margin-right: 0;
   }
   .product-media__inner .media-gallery__viewer {
     flex: 1;
