Fix product page snippets and enable details

--- a/snippets/media-gallery.liquid
+++ b/snippets/media-gallery.liquid
@@ -1,4 +1,4 @@
-{%- comment -%}theme-check-disable LiquidTag{%- endcomment -%}
+{% # theme-check-disable LiquidTag %}
 
 {%- comment -%}
   Parameters:
