--- a/snippets/sizes-attribute.liquid
+++ b/snippets/sizes-attribute.liquid
@@ -1,4 +1,4 @@
-{%- comment -%}theme-check-disable LiquidTag{%- endcomment -%}
+{% # theme-check-disable LiquidTag %}
 {%- comment -%}
   Parameters:
   - min {Number|String} - Number of columns (grid mode) or width value when no media queries are matched.
