--- a/snippets/structured-data-product.liquid
+++ b/snippets/structured-data-product.liquid
@@ -1,10 +1,11 @@
+{% # theme-check-disable UnknownFilter %}
 {%- comment -%}
   Parameters:
   - product {Object} - Product object.
 
   Usage:
   {% render 'structured-data-product', product: product %}
-{%- endcomment -%}
+  {%- endcomment -%}
 
 <script type="application/ld+json">
   {{ product | structured_data }}
