--- a/snippets/localization-form.liquid
+++ b/snippets/localization-form.liquid
@@ -1,4 +1,4 @@
-{%- comment -%}theme-check-disable LiquidTag{%- endcomment -%}
+{% # theme-check-disable LiquidTag %}
 {%- comment -%}
   Parameters:
   - id {String} - Unique id for the form.
