--- a/snippets/structured-data-article.liquid
+++ b/snippets/structured-data-article.liquid
@@ -1,10 +1,11 @@
+{% # theme-check-disable UnknownFilter %}
 {%- comment -%}
   Parameters:
   - article {Object} - Article object.
 
   Usage:
   {% render 'structured-data-article', article: article %}
-{%- endcomment -%}
+  {%- endcomment -%}
 
 <script type="application/ld+json">
   {{ article | structured_data }}
