Move product details into product card

--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -682,6 +682,8 @@
             {%- endif -%}
         {%- endcase -%}
       {%- endfor -%}
+
+      {% section 'product-details' %}
       </div>
 
       {%- if section.settings.stick_on_scroll -%}
